--- a/login_form/app/views/users/new.html.erb
+++ b/login_form/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 	<%= form_for(@user) do |f| %>
+	    <%= render 'shared/error_messages' %>
 		<div class="field">
 			<%= f.label :name %><br />
 			<%= f.text_field :name %>
