--- a/final/app/views/static_pages/contact.html.erb
+++ b/final/app/views/static_pages/contact.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title,"Contact")%>
 <h1>Contact</h1>
-<p>I'm in <a href="www.facebook.com/nphiep">facebook</a> now.</p>
+<p>I'm in <a href="https://www.facebook.com/N.P.Hiep">facebook</a> now.</p>
